progress on notebook

--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -190,15 +190,7 @@
     "editable": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Serving HTTP on 127.0.0.1 port 8080 ...\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python3 -m http.server 8080 --bind 127.0.0.1"
    ]
@@ -240,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -265,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -295,10 +287,10 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['texts', 'xmlnode', 'width', 'height', 'number', 'image'])"
+       "dict_keys(['number', 'texts', 'xmlnode', 'image', 'height', 'width'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -346,7 +338,7 @@
       "  'topright': array([ 404.,   93.]),\n",
       "  'value': 'Baden',\n",
       "  'width': 45,\n",
-      "  'xmlnode': <Element 'text' at 0x7ff62004c0e8>},\n",
+      "  'xmlnode': <Element 'text' at 0x7f91855f7318>},\n",
       " {'bottom': 104.0,\n",
       "  'bottomleft': array([ 737.,  104.]),\n",
       "  'bottomright': array([ 745.,  104.]),\n",
@@ -358,7 +350,7 @@
       "  'topright': array([ 745.,   91.]),\n",
       "  'value': '3',\n",
       "  'width': 8,\n",
-      "  'xmlnode': <Element 'text' at 0x7ff62004c138>},\n",
+      "  'xmlnode': <Element 'text' at 0x7f91855f7368>},\n",
       " {'bottom': 144.0,\n",
       "  'bottomleft': array([  58.,  144.]),\n",
       "  'bottomright': array([  76.,  144.]),\n",
@@ -370,7 +362,7 @@
       "  'topright': array([  76.,  136.]),\n",
       "  'value': 'Ein\\xad',\n",
       "  'width': 18,\n",
-      "  'xmlnode': <Element 'text' at 0x7ff62004c1d8>}]\n"
+      "  'xmlnode': <Element 'text' at 0x7f91855f7408>}]\n"
      ]
     }
    ],
@@ -467,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -486,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -521,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -575,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -609,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -645,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -664,7 +656,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -728,9 +720,211 @@
    "source": [
     "from pdftabextract.clustering import calc_cluster_centers_1d\n",
     "\n",
-    "col_positions = calc_cluster_centers_1d(vertical_clusters)\n",
-    "print('found %d column borders:' % len(col_positions))\n",
-    "print(col_positions)"
+    "page_colpos = calc_cluster_centers_1d(vertical_clusters)\n",
+    "print('found %d column borders:' % len(page_colpos))\n",
+    "print(page_colpos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Find out the row positions of the table by analyzing the y-coordinates' distribution of text boxes\n",
+    "\n",
+    "For the row or line positions in the table, we can't rely on optical features because there are no row seperator lines. However, we can exploit the distinctive distribution of y-coordinates of the text boxes and cluster them in order to get an estimation of the row positions. Another challenge is to find the start and the end of the table. We can do so by analyzing the specific contents of the text boxes for hints that the first row starts (it must start with a population number on the left) or that the text box is the table footer (it has something to do with \"Ala Anzeigen\").\n",
+    "\n",
+    "We start by finding text boxes of \"usual\" height in the first two columns, because the text boxes in these columns are most reliable in determining the row position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# right border of the second column\n",
+    "col2_rightborder = page_colpos[2]\n",
+    "\n",
+    "# calculate median text box height\n",
+    "median_text_height = np.median([t['height'] for t in p['texts']])\n",
+    "\n",
+    "# get all texts in the first two columns with a \"usual\" textbox height\n",
+    "# we will only use these text boxes in order to determine the line positions because they are more \"stable\"\n",
+    "# otherwise, especially the right side of the column header can lead to problems detecting the first table row\n",
+    "text_height_deviation_thresh = median_text_height / 2\n",
+    "texts_cols_1_2 = [t for t in p['texts']\n",
+    "                  if t['right'] <= col2_rightborder\n",
+    "                     and abs(t['height'] - median_text_height) <= text_height_deviation_thresh]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we get the text boxes' top and bottom border positions, cluster them, and calculate the cluster centers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of line positions: 94\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pdftabextract.clustering import zip_clusters_and_values\n",
+    "from pdftabextract.textboxes import border_positions_from_texts, split_texts_by_positions, join_texts\n",
+    "from pdftabextract.common import all_a_in_b, DIRECTION_VERTICAL\n",
+    "\n",
+    "# get all textboxes' top and bottom border positions\n",
+    "borders_y = border_positions_from_texts(texts_cols_1_2, DIRECTION_VERTICAL)\n",
+    "\n",
+    "# break into clusters using half of the median text height as break distance\n",
+    "clusters_y = find_clusters_1d_break_dist(borders_y, dist_thresh=median_text_height/2)\n",
+    "clusters_w_vals = zip_clusters_and_values(clusters_y, borders_y)\n",
+    "\n",
+    "# for each cluster, calculate the median as center\n",
+    "pos_y = calc_cluster_centers_1d(clusters_w_vals)\n",
+    "pos_y.append(p['height'])\n",
+    "\n",
+    "print('number of line positions:', len(pos_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now try to find the first table row by checking when we find the first text box that contains a string which matches a typical row pattern."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "208.80321434348292"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# a (possibly malformed) population number + space + start of city name\n",
+    "pttrn_table_row_beginning = re.compile(r'^[\\d Oo][\\d Oo]{2,} +[A-ZÄÖÜ]')\n",
+    "\n",
+    "# 1. try to find the top row of the table\n",
+    "texts_cols_1_2_per_line = split_texts_by_positions(texts_cols_1_2, pos_y, DIRECTION_VERTICAL,\n",
+    "                                                   alignment='middle',\n",
+    "                                                   enrich_with_positions=True)\n",
+    "\n",
+    "# go through the texts line per line\n",
+    "for line_texts, (line_top, line_bottom) in texts_cols_1_2_per_line:\n",
+    "    line_str = join_texts(line_texts)\n",
+    "    if pttrn_table_row_beginning.match(line_str):  # check if the line content matches the given pattern\n",
+    "        top_y = line_top\n",
+    "        break\n",
+    "else:\n",
+    "    top_y = 0\n",
+    "\n",
+    "top_y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now try to find the last table row by checking if we find a \"big\" text box in the lower page area that matches certain words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1261"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# hints for a footer text box\n",
+    "words_in_footer = ('anzeige', 'annahme', 'ala')\n",
+    "\n",
+    "# 2. try to find the bottom row of the table\n",
+    "min_footer_text_height = median_text_height * 1.5\n",
+    "min_footer_y_pos = p['height'] * 0.7\n",
+    "# get all texts in the lower 30% of the page that have are at least 50% bigger than the median textbox height\n",
+    "bottom_texts = [t for t in p['texts']\n",
+    "                if t['top'] >= min_footer_y_pos and t['height'] >= min_footer_text_height]\n",
+    "bottom_texts_per_line = split_texts_by_positions(bottom_texts,\n",
+    "                                                 pos_y + [p['height']],   # always down to the end of the page\n",
+    "                                                 DIRECTION_VERTICAL,\n",
+    "                                                 alignment='middle',\n",
+    "                                                 enrich_with_positions=True)\n",
+    "# go through the texts at the bottom line per line\n",
+    "page_span = page_colpos[-1] - page_colpos[0]\n",
+    "min_footer_text_width = page_span * 0.8\n",
+    "for line_texts, (line_top, line_bottom) in bottom_texts_per_line:\n",
+    "    line_str = join_texts(line_texts)\n",
+    "    has_wide_footer_text = any(t['width'] >= min_footer_text_width for t in line_texts)\n",
+    "    # check if there's at least one wide text or if all of the required words for a footer match\n",
+    "    if has_wide_footer_text or all_a_in_b(words_in_footer, line_str):\n",
+    "        bottom_y = line_top\n",
+    "        break\n",
+    "else:\n",
+    "    bottom_y = p['height']\n",
+    "\n",
+    "bottom_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> page 3: 92 lines between [208.803214, 1261.000000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# finally filter the line positions so that only the lines between the table top and bottom are left\n",
+    "page_rowpos = [y for y in pos_y if top_y <= y <= bottom_y]\n",
+    "\n",
+    "print(\"> page %d: %d lines between [%f, %f]\" % (p_num, len(page_rowpos), top_y, bottom_y))"
    ]
   },
   {
