--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['number', 'texts', 'xmlnode', 'image', 'height', 'width'])"
+       "dict_keys(['image', 'width', 'number', 'height', 'texts', 'xmlnode'])"
       ]
      },
      "execution_count": 6,
@@ -338,7 +338,7 @@
       "  'topright': array([ 404.,   93.]),\n",
       "  'value': 'Baden',\n",
       "  'width': 45,\n",
-      "  'xmlnode': <Element 'text' at 0x7f91855f7318>},\n",
+      "  'xmlnode': <Element 'text' at 0x7f56deca6368>},\n",
       " {'bottom': 104.0,\n",
       "  'bottomleft': array([ 737.,  104.]),\n",
       "  'bottomright': array([ 745.,  104.]),\n",
@@ -350,7 +350,7 @@
       "  'topright': array([ 745.,   91.]),\n",
       "  'value': '3',\n",
       "  'width': 8,\n",
-      "  'xmlnode': <Element 'text' at 0x7f91855f7368>},\n",
+      "  'xmlnode': <Element 'text' at 0x7f56deca63b8>},\n",
       " {'bottom': 144.0,\n",
       "  'bottomleft': array([  58.,  144.]),\n",
       "  'bottomright': array([  76.,  144.]),\n",
@@ -362,7 +362,7 @@
       "  'topright': array([  76.,  136.]),\n",
       "  'value': 'Ein\\xad',\n",
       "  'width': 18,\n",
-      "  'xmlnode': <Element 'text' at 0x7f91855f7408>}]\n"
+      "  'xmlnode': <Element 'text' at 0x7f56deca6458>}]\n"
      ]
     }
    ],
@@ -698,7 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we simple calculate the centers of the clusters, by default taking the median of the cluster values."
+    "Now we simple calculate the centers of the clusters, by default taking the median of the cluster values. We also need to divide by the page scaling because the cluster positions are in image space but we need the column positions in \"text box space\"."
    ]
   },
   {
@@ -713,14 +713,17 @@
      "output_type": "stream",
      "text": [
       "found 17 column borders:\n",
-      "[108.89662847819915, 257.0, 974.11404956463559, 1115.2309342518365, 1184.0, 1257.0, 1329.0, 1400.0, 1469.0, 1541.8215342450189, 1611.0317981436788, 1680.2420620423386, 1753.1217572959686, 1832.1225131650576, 1920.2468099566324, 1991.2481817415478, 2058.1247668984684]\n"
+      "[  39.16765831   92.43709677  350.3668275   401.12338442  425.85806452\n",
+      "  452.11451613  478.01129032  503.5483871   528.36612903  554.55839054\n",
+      "  579.45175965  604.34512877  630.55830948  658.97309748  690.66941713\n",
+      "  716.2070073   740.26100487]\n"
      ]
     }
    ],
    "source": [
     "from pdftabextract.clustering import calc_cluster_centers_1d\n",
     "\n",
-    "page_colpos = calc_cluster_centers_1d(vertical_clusters)\n",
+    "page_colpos = np.array(calc_cluster_centers_1d(vertical_clusters)) / page_scaling_x\n",
     "print('found %d column borders:' % len(page_colpos))\n",
     "print(page_colpos)"
    ]
@@ -738,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -768,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -777,7 +780,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of line positions: 94\n"
+      "number of line positions: 100\n"
      ]
     }
    ],
@@ -809,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -821,7 +824,7 @@
        "208.80321434348292"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -866,10 +869,10 @@
     {
      "data": {
       "text/plain": [
-       "1261"
+       "1089.8901693310179"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,6 +910,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> page 3: 93 lines between [208.803214, 1089.890169]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# finally filter the line positions so that only the lines between the table top and bottom are left\n",
+    "page_rowpos = [y for y in pos_y if top_y <= y <= bottom_y]\n",
+    "\n",
+    "print(\"> page %d: %d lines between [%f, %f]\" % (p_num, len(page_rowpos), top_y, bottom_y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Create a grid of columns and lines\n",
+    "\n",
+    "From the column and row positions that we detected, we can now generate a \"page grid\" which should resemble the table layout as close as possible. We then save the grid information as JSON file so that we can display it in pdf2xml-viewer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> page 3: grid with 92 rows, 16 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pdftabextract.extract import make_grid_from_positions\n",
+    "\n",
+    "grid = make_grid_from_positions(page_colpos, page_rowpos)\n",
+    "n_rows = len(grid)\n",
+    "n_cols = len(grid[0])\n",
+    "print(\"> page %d: grid with %d rows, %d columns\" % (p_num, n_rows, n_cols))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  39.16765831,  208.80321434],\n",
+       "       [  92.43709677,  217.83563592]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the page grid is a 2D matrix that contains the rectangular table cells\n",
+    "# this is the top left table cell:\n",
+    "grid[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {
     "collapsed": false
@@ -916,15 +999,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> page 3: 92 lines between [208.803214, 1261.000000]\n"
+      "saving page grids JSON file to 'generated_output/ALA1934_RR-excerpt.pdf.pagegrids_p3_only.json'\n"
      ]
     }
    ],
    "source": [
-    "# finally filter the line positions so that only the lines between the table top and bottom are left\n",
-    "page_rowpos = [y for y in pos_y if top_y <= y <= bottom_y]\n",
+    "from pdftabextract.common import save_page_grids\n",
     "\n",
-    "print(\"> page %d: %d lines between [%f, %f]\" % (p_num, len(page_rowpos), top_y, bottom_y))"
+    "page_grids_file = os.path.join(OUTPUTPATH, output_files_basename + '.pagegrids_p3_only.json')\n",
+    "print(\"saving page grids JSON file to '%s'\" % page_grids_file)\n",
+    "save_page_grids({p_num: grid}, page_grids_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We should now evaluate our page grid using pdf2xml-viewer. At first, we will need to load the XML of the repaired (deskewed) pages and then the JSON file containing the page grid information for page 3. When we select page 3 we should see an output like this:\n",
+    "\n",
+    "![page grids of p.3 in pdf2xml-viewer](nb_images/pdf2xml-viewer-pagegrid.png)\n",
+    "\n",
+    "We can see that the rows and columns were detected correctly (decrease the background image visibility to for better display) and the deskewed text boxes mostly lie in the correct table cells. So the only thing left now is to finally extract the data by fitting the text boxes in the correct table cells."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Match the text boxes into the grid and hence extract the tabular data in order to export it as Excel and CSV file\n",
+    "\n",
+    "We can use `fit_texts_into_grid` to fit the text boxes into the grid and then transform it to a [pandas](http://pandas.pydata.org/) *DataFrame*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from pdftabextract.extract import fit_texts_into_grid, datatable_to_dataframe\n",
+    "\n",
+    "datatable = fit_texts_into_grid(p['texts'], grid)\n",
+    "    \n",
+    "df = datatable_to_dataframe(datatable)\n",
+    "\n",
+    "df.head(n=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of course you would now usually do a lot of parsing, data clean up and validation because with this kind of messy data it will never be 100% perfect. Still this is a good basis to work on. We can export the data now as CSV and Excel:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "csv_output_file = os.path.join(OUTPUTPATH, output_files_basename + '-p3_only.csv')\n",
+    "print(\"saving extracted data to '%s'\" % csv_output_file)\n",
+    "df.to_csv(csv_output_file, index=False)\n",
+    "\n",
+    "excel_output_file = os.path.join(OUTPUTPATH, output_files_basename + '-p3_only.xlsx')\n",
+    "print(\"saving extracted data to '%s'\" % excel_output_file)\n",
+    "df.to_excel(excel_output_file, index=False)"
    ]
   },
   {
