updated README and notebook

--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -824,13 +824,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of line positions: 100\n"
+     ]
+    }
+   ],
    "source": [
     "from pdftabextract.clustering import zip_clusters_and_values\n",
     "from pdftabextract.textboxes import border_positions_from_texts, split_texts_by_positions, join_texts\n",
@@ -862,14 +870,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "208.80321434348292"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -905,13 +924,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1089.8901693310179"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# hints for a footer text box\n",
     "words_in_footer = ('anzeige', 'annahme', 'ala')\n",
@@ -945,13 +975,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> page 3: 93 lines between [208.803214, 1089.890169]\n"
+     ]
+    }
+   ],
    "source": [
     "# finally filter the line positions so that only the lines between the table top and bottom are left\n",
     "page_rowpos = [y for y in pos_y if top_y <= y <= bottom_y]\n",
@@ -973,13 +1011,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> page 3: grid with 92 rows, 16 columns\n"
+     ]
+    }
+   ],
    "source": [
     "from pdftabextract.extract import make_grid_from_positions\n",
     "\n",
@@ -991,13 +1037,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  39.16765831,  208.80321434],\n",
+       "       [  92.43709677,  217.83563592]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the page grid is a 2D matrix that contains the rectangular table cells\n",
     "# this is the top left table cell:\n",
@@ -1006,13 +1064,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving page grids JSON file to 'generated_output/ALA1934_RR-excerpt.pdf.pagegrids_p3_only.json'\n"
+     ]
+    }
+   ],
    "source": [
     "from pdftabextract.common import save_page_grids\n",
     "\n",
@@ -1049,13 +1115,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col01</th>\n",
+       "      <th>col02</th>\n",
+       "      <th>col03</th>\n",
+       "      <th>col04</th>\n",
+       "      <th>col05</th>\n",
+       "      <th>col06</th>\n",
+       "      <th>col07</th>\n",
+       "      <th>col08</th>\n",
+       "      <th>col09</th>\n",
+       "      <th>col10</th>\n",
+       "      <th>col11</th>\n",
+       "      <th>col12</th>\n",
+       "      <th>col13</th>\n",
+       "      <th>col14</th>\n",
+       "      <th>col15</th>\n",
+       "      <th>col16</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>157 000</td>\n",
+       "      <td>K a r l s r u h e   i .   B . ,   Generalanzei...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>d eu tsch la n d   ..............................</td>\n",
+       "      <td>23  300</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>N</td>\n",
+       "      <td>90</td>\n",
+       "      <td>50</td>\n",
+       "      <td>c</td>\n",
+       "      <td></td>\n",
+       "      <td>420 280</td>\n",
+       "      <td>5040</td>\n",
+       "      <td>+</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>B e i  gleichz.  A u fg .  in   B ez.-A u sg ....</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td></td>\n",
+       "      <td>u.  K in zig -B ote,  H ardt-Anzeiger,  K eM ,...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>8 R p f, R ekl. mm  SO l i p f    Siehe  A nze...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td></td>\n",
+       "      <td>K aärlsruher&lt;B ürgerzeitung......................</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4</td>\n",
+       "      <td>*</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>D</td>\n",
+       "      <td></td>\n",
+       "      <td>295 186</td>\n",
+       "      <td></td>\n",
+       "      <td>+</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td></td>\n",
+       "      <td>»  V i   S .  R M   9 6 ,—</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td></td>\n",
+       "      <td>K arlsruh eü-'Tagbatt  .  .  .  S iehe  A nzei...</td>\n",
+       "      <td>13 000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>N</td>\n",
+       "      <td>68</td>\n",
+       "      <td>30</td>\n",
+       "      <td>B</td>\n",
+       "      <td>420</td>\n",
+       "      <td>2 87</td>\n",
+       "      <td>5040</td>\n",
+       "      <td>+</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td></td>\n",
+       "      <td>R esidenZ-A nzeiger  . . . .   Siehe  A nzeige...</td>\n",
+       "      <td>7 300</td>\n",
+       "      <td>6</td>\n",
+       "      <td>22</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>N</td>\n",
+       "      <td>96</td>\n",
+       "      <td>25</td>\n",
+       "      <td>B</td>\n",
+       "      <td>450</td>\n",
+       "      <td>2 92</td>\n",
+       "      <td>5400</td>\n",
+       "      <td>+</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td></td>\n",
+       "      <td>R h e i n - R ö t e ....................... Si...</td>\n",
+       "      <td>1 450</td>\n",
+       "      <td>6</td>\n",
+       "      <td>46</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>N</td>\n",
+       "      <td>96</td>\n",
+       "      <td>15</td>\n",
+       "      <td>B</td>\n",
+       "      <td>450</td>\n",
+       "      <td>2 92</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>+</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     col01                                              col02    col03 col04  \\\n",
+       "0  157 000  K a r l s r u h e   i .   B . ,   Generalanzei...                  \n",
+       "1           d eu tsch la n d   ..............................  23  300     7   \n",
+       "2           B e i  gleichz.  A u fg .  in   B ez.-A u sg ....                  \n",
+       "3           u.  K in zig -B ote,  H ardt-Anzeiger,  K eM ,...                  \n",
+       "4           8 R p f, R ekl. mm  SO l i p f    Siehe  A nze...                  \n",
+       "5           K aärlsruher<B ürgerzeitung......................              1   \n",
+       "6                                  »  V i   S .  R M   9 6 ,—                  \n",
+       "7           K arlsruh eü-'Tagbatt  .  .  .  S iehe  A nzei...   13 000     7   \n",
+       "8           R esidenZ-A nzeiger  . . . .   Siehe  A nzeige...    7 300     6   \n",
+       "9           R h e i n - R ö t e ....................... Si...    1 450     6   \n",
+       "\n",
+       "  col05 col06 col07 col08 col09 col10 col11 col12    col13 col14 col15 col16  \n",
+       "0                                                                             \n",
+       "1    22    12     7     N    90    50     c        420 280  5040     +    25  \n",
+       "2                                                                             \n",
+       "3                                                                             \n",
+       "4                                                                             \n",
+       "5    50     4     *                       D        295 186           +    54  \n",
+       "6                                                                             \n",
+       "7    22    12     6     N    68    30     B   420     2 87  5040     +    25  \n",
+       "8    22    12     4     N    96    25     B   450     2 92  5400     +    25  \n",
+       "9    46     6     5     N    96    15     B   450     2 92  2700     +    25  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pdftabextract.extract import fit_texts_into_grid, datatable_to_dataframe\n",
     "\n",
@@ -1078,13 +1396,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving extracted data to 'generated_output/ALA1934_RR-excerpt.pdf-p3_only.csv'\n",
+      "saving extracted data to 'generated_output/ALA1934_RR-excerpt.pdf-p3_only.xlsx'\n"
+     ]
+    }
+   ],
    "source": [
     "csv_output_file = os.path.join(OUTPUTPATH, output_files_basename + '-p3_only.csv')\n",
     "print(\"saving extracted data to '%s'\" % csv_output_file)\n",
