Fix some typos (found by codespell)
Signed-off-by: Stefan Weil <sw@weilnetz.de>

--- a/examples/catalogue_30s/catalog_30s_notebook.ipynb
+++ b/examples/catalogue_30s/catalog_30s_notebook.ipynb
@@ -705,7 +705,7 @@
     "\n",
     "# cluster the detected *vertical* lines using find_clusters_1d_break_dist as simple clustering function\n",
     "# (break on distance MIN_COL_WIDTH/2)\n",
-    "# additionaly, remove all cluster sections that are considered empty\n",
+    "# additionally, remove all cluster sections that are considered empty\n",
     "# a cluster is considered empty when the number of text boxes in it is below 10% of the median number of text boxes\n",
     "# per cluster section\n",
     "vertical_clusters = iproc_obj.find_clusters(imgproc.DIRECTION_VERTICAL, find_clusters_1d_break_dist,\n",
